force-app/main/default/objects/Classification_Category__c/Classification_Category__c.object-meta.xml
<CustomObject>
    <description>Represents a category of classifications within a type, for example, Increasing Access to Education for the Issue type</description>
    <label>Classification Category</label>
    <nameField>
        <label>Classification Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classification Categories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>