force-app/main/default/objects/Classification_Category__c/fields/Definition__c.field-meta.xml
<CustomField>
    <fullName>Definition__c</fullName>
    <description>Definition of this classification category</description>
    <inlineHelpText>Definition of this classification category</inlineHelpText>
    <label>Definition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>