force-app/main/default/objects/Classification_Category__c/fields/Initials__c.field-meta.xml
<CustomField>
    <fullName>Initials__c</fullName>
    <description>Initials for this classification category</description>
    <inlineHelpText>Initials for this classification category</inlineHelpText>
    <label>Initials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>